exam/css/style.scss
/* ... */
  .good-point {
    border-bottom: 1px solid #ededed;
    display: flex;
    flex-direction: column;
    align-items: center;

    h2 {
      font-weight: 100;
      font-size: 20px;
      text-transform: uppercase;
      color: #3498db;
    }
    .point-column {
      margin-bottom: 30px;

      .point-img {
        display: block;
        margin: 10px auto;
      }

      .title {
        font-size: 15px;
        font-weight: bold;
        text-transform: uppercase;
        color: #333;
        text-align: center;
      }

      p {
        font-size: 13px;
        line-height: 20px;
        color: #333;
        text-align: center;
        margin: 15px 25px 22px 25px;
      }

      .point-view {
        height: 50px;
        width: 50px;
        border: 1px solid #ededed;
        border-radius: 50%;
        margin: 23px auto 0 auto;

        .point-view-link {
          display: block;
          font-size: 13px;
          text-transform: uppercase;
          color: #333;
          text-decoration: none;
          margin-left: 8px;
          margin-top: 16px;
        }
      }
    }
  }

.feedback {
  height: 745px;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;



    .feedback-title {
      color: #3498db;
      font-size: 20px;
      font-weight: 100;
      text-transform: uppercase;
      text-align: center;
      margin: 34px auto 15px auto;
    }

    .arrow {
      display: inline-block;
      height: 37px;
      width: 37px;
      border: 1px solid #ededed;
      border-radius: 50%;

      .next {
        background: url("../img/feed-back/sprites.png") no-repeat 0 -51px;
        width: 11px;
        height: 17px;
        color: transparent;
        display: block;
        margin-left: 15px;
        margin-top: 10px;
      }

      .prev {
        background: url("../img/feed-back/sprites.png") no-repeat 0 -1px;
        width: 11px;
        height: 17px;
        color: transparent;
        display: block;
        margin-left: 14px;
        margin-top: 10px;
      }
    }
    .arrow:hover > .next {
      background: url("../img/feed-back/sprites.png") no-repeat -50px 0;
      width: 11px;
      height: 17px;
    }

    .arrow:hover > .prev {
      background: url("../img/feed-back/sprites.png") no-repeat -51px -50px;;
      width: 11px;
      height: 17px;
    }

    .arrow:hover {
      background: #f2f2f2;
    }


  .annotation {
    font-size: 13px;
    line-height: 20px;
    color: #333;
    text-align: justify;
    margin: 0 40px 0 20px;
  }

  .author {
    font-size: 13px;
    font-weight: bold;
    text-transform: uppercase;
    color: #333;
    text-align: right;
    margin-right: 20px;
  }

  .annotation::before {
    content: open-quote;
    font-size: 50px;
    font-weight: bold;
    text-transform: uppercase;
    color: #f2f2f2;
    display: block;
    margin-top: 22px;
  }

  .author::after {
    content: close-quote;
    font-size: 50px;
    font-weight: bold;
    text-transform: uppercase;
    color: #f2f2f2;
    display: block;
    margin-top: -10px;
  }

  .get-started {
    position: relative;
    width: 300px;
    height: 130px;
    background: #e74c3c;
    margin: 163px auto 50px auto;
    z-index: 1;

    p {
      font-weight: 100;
      font-size: 20px;
      color: #fff;
      text-transform: uppercase;
      text-align: center;
      margin-left: 50px;
      margin-right: 40px;
      padding-top: 12px;
    }

    .go {
      display: block;
      width: 27px;
      height: 27px;
      border: 2px solid white;
      border-radius: 50%;
      background: url("../img/feed-back/go.png") no-repeat 10px 5px;
      margin: -7px 0 0 140px;
    }
  }

}

.feedback::after {
  content: "";
  background-image: url("../img/feed-back/background.png");
  position: absolute;
  bottom: 0;
  left: calc(50% - 112.5px);
  width: 225px;
  height: 364px;

}

footer {
  height: 315px;
  background: #85c1e9;
  display: flex;
  flex-direction: column;
  align-items: center;

  .company-name {
    font-weight: 100;
    font-size: 20px;
    text-transform: uppercase;
    color: #fff;
    text-align: center;
    border-bottom: solid 2px #2980b9;
    padding-bottom: 4px;
    margin: 0;

  }

  .logo-footer {
    display: block;
    margin: 32px auto 10px auto;
    width: 53px;
    height: 53px;
    background: url("../img/header/sprites.png") no-repeat 0 0;
  }

  .footer-column-right{
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .footer-social-networks {
    p {
      display: inline-block;
      font-size: 13px;
      color: #fff;
    }

    .facebook, .google, .twitter {
      display: inline-block;
      width: 22px;
      height: 22px;
      vertical-align: middle;
    }

    .facebook {
      background: url("../img/header/sprites.png") no-repeat -77px -2px;
    }

    .google {
      background: url("../img/header/sprites.png") no-repeat -150px -1px;
    }

    .twitter {
      background: url("../img/header/sprites.png") no-repeat -249px 0;
    }


  }
  .copyright {
    margin: 10px 40px 68px 40px;

    p {
      text-align: center;
      font-size: 13px;
      color: #fff;
      line-height: 19px;
    }

  }
}
/* ... */

